# DSE-skeleton-pruning

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml  requirement.txt  setup.py
dse/: __init__.py  dse.py
dsepruning/: __init__.py  dse_helper.pyx  dsepruning.py
example/: example.ipynb
